--- a/index.html
+++ b/index.html
@@ -225,7 +225,6 @@
     </section>
     </div>
 
-
     <div class="container-fluid pb-5">
         <section class="welcome-intro">
             <div class="container-fluid" id="welcome">
@@ -281,16 +280,6 @@
         </section>
     </div>
 
-
-
-
-
-
-
-
-
-
-
     <div class="container-fluid pt-5 mb-5">
         <section class="three-col-part">
             <div class="container-fluid pb-5" id="three-col">
@@ -328,7 +317,7 @@
                                     my whole heart.
                                 </div>
                             </div>
-                            <div class="col-third  ms-2 w-50 mt-5" data-aos="fade-left" data-aos-delay="350">
+                            <div class="col-third ms-2 w-50 mt-5" data-aos="fade-left" data-aos-delay="350">
                                 <button class="col-third-button">READ MORE</button>
                             </div>
                         </div>
@@ -423,7 +412,6 @@
     </section>
     </div>
 
-
     <div class="container-fluid my-5">
         <section class="banner">
             <div class="container-fluid py-5" id="banner-part">
@@ -450,7 +438,7 @@
             <div class="back-img py-5">
                 <div class="row" id="sec-last-banner">
                     <div class="col-lg-4">
-                        <div class="sec-col d-flex my-3 flex-column ms-3">
+                        <div class="sec-col d-flex my-3 flex-column ms-3" data-aos="fade-up" data-aos-delay="200">
                             <div class="sec-col-text position-relative">
                                 <div class="fs-6 fw-bolder" id="sec-last-banner-head">
                                     TEAM MEMBER
@@ -467,22 +455,69 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-8" data-aos="fade-left">
                         <div class="swiper myownSwiper">
-                            <div class="swiper-wrapper mx-4">
-                                <div class="swiper-slide mx-3">
-                                    <div class="sec-last-banner-carosal">
-                                        <img class="sec-last-banner-carosal-img" src="content/sec-last-carosal.jpg" alt="">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide ">
+                                    <div class="sec-last-banner-carosal position-relative">
+                                        <img class="sec-last-banner-carosal-img" src="content/sec-last-carosal.jpg"
+                                            alt="">
+                                        <div class="sec-last-banner-pop d-flex flex-column justify-content-between"
+                                            style="flex-basis: 15%;">
+                                            <div class="fs-4 fw-bold pop-text">
+                                                Elissa Tylor
+                                            </div>
+                                            <div class="text-start px-4 pop-text-para" style="flex-basis:90%;">
+                                                A wonderful serenity has taken possession of my entire soul, like these
+                                                sweet mornings.
+                                            </div>
+                                            <div class="d-flex gap-5 ms-4" style="flex-basis:25%;">
+                                                <i class="fa-brands fa-facebook-f fa-sm"></i>
+                                                <i class=" fa-brands fa-twitter fa-sm"></i>
+                                                <i class="3 me-2 fa-brands fa-pinterest fa-sm"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide mx-3">
-                                    <div class="sec-last-banner-carosal">
-                                        <img class="sec-last-banner-carosal-img" src="content/sec-last-carosal (1).jpg" alt="">
+                                <div class="swiper-slide">
+                                    <div class="sec-last-banner-carosal position-relative">
+                                        <img class="sec-last-banner-carosal-img" src="content/sec-last-carosal (1).jpg"
+                                            alt="">
+                                        <div class="sec-last-banner-pop d-flex flex-column justify-content-between"
+                                            style="flex-basis: 15%;">
+                                            <div class="fs-4 fw-bold pop-text">
+                                                Elissa Tylor
+                                            </div>
+                                            <div class="text-start px-4 pop-text-para" style="flex-basis:90%;">
+                                                A wonderful serenity has taken possession of my entire soul, like these
+                                                sweet mornings.
+                                            </div>
+                                            <div class="d-flex gap-5 ms-4" style="flex-basis:25%;">
+                                                <i class="fa-brands fa-facebook-f fa-sm"></i>
+                                                <i class=" fa-brands fa-twitter fa-sm"></i>
+                                                <i class="3 me-2 fa-brands fa-pinterest fa-sm"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide mx-3">
-                                    <div class="sec-last-banner-carosal">
+                                <div class="swiper-slide">
+                                    <div class="sec-last-banner-carosal position-relative">
                                         <img class="sec-last-banner-carosal-img" src="content/sec-last-carosal (2).jpg">
+                                        <div class="sec-last-banner-pop d-flex flex-column justify-content-between"
+                                            style="flex-basis: 15%;">
+                                            <div class="fs-4 fw-bold pop-text">
+                                                Elissa Tylor
+                                            </div>
+                                            <div class="text-start px-4 pop-text-para" style="flex-basis:90%;">
+                                                A wonderful serenity has taken possession of my entire soul, like these
+                                                sweet mornings.
+                                            </div>
+                                            <div class="d-flex gap-5 ms-4" style="flex-basis:25%;">
+                                                <i class="fa-brands fa-facebook-f fa-sm"></i>
+                                                <i class=" fa-brands fa-twitter fa-sm"></i>
+                                                <i class="3 me-2 fa-brands fa-pinterest fa-sm"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -494,86 +529,101 @@
         </section>
     </div>
 
+    <div class="container-fluid">
+        <div class="map-form py-5 mx-5">
+            <div class="form-with-map p-4 rounded">
+                <div class="form-to-add">
+                    <div class="p-5 display-5 fw-bolder text-light">
+                        Request For Quote
+                    </div>
+                    <div class="ms-5 form-para">
+                        A wonderful serenity has taken possession of my entire soul
+                    </div>
+                    <form action="" method="post">
+                        <div class="container m-4">
+                            <div class="row">
+                                <div class="col">
+                                    <input placeholder="How To Assits You" type="text" name="text" class="input">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <script src="script.js"></script>
+        <!-- Swiper JS -->
+        <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
-
-
-
-    <script src="script.js"></script>
-    <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-
-    <!-- Initialize Swiper -->
-    <script>
-
-        var swiper = new Swiper(".myownSwiper", {
-            slidesPerView: 1,
-            spaceBetween: 20,
-            pagination: {
-                el: ".swiper-pagination",
-                clickable: true,
-            },
-            breakpoints: {
-                320: {
-                    slidesPerView: 1,
-                    spaceBetween: 60,
+        <!-- Initialize Swiper -->
+        <script>
+            var swiper = new Swiper(".myownSwiper", {
+                pagination: {
+                    el: ".swiper-pagination",
+                    clickable: true,
                 },
-                640: {
-                    slidesPerView: 2,
-                    spaceBetween: 50,
+                breakpoints: {
+                    320: {
+                        slidesPerView: 1,
+                        spaceBetween: 20,
+                    },
+                    640: {
+                        slidesPerView: 2,
+                        spaceBetween: 10,
+                    },
+                    768: {
+                        slidesPerView: 2,
+                        spaceBetween: 10,
+                    },
+                    1024: {
+                        slidesPerView: 3,
+                        spaceBetween: 10,
+                    },
                 },
-                768: {
-                    slidesPerView: 2,
-                    spaceBetween: 50,
-                },
-                1024: {
-                    slidesPerView: 3,
-                    spaceBetween: 50,
-                },
-            },
-        });
+            });
 
 
-        var swiper = new Swiper(".mySwiper", {
-            slidesPerView: 1,
-            spaceBetween: 10,
-            pagination: {
-                el: ".swiper-pagination",
-                clickable: true,
-            },
-            breakpoints: {
+            var swiper = new Swiper(".mySwiper", {
+                slidesPerView: 1,
+                spaceBetween: 10,
+                pagination: {
+                    el: ".swiper-pagination",
+                    clickable: true,
+                },
+                breakpoints: {
 
-                320: {
-                    slidesPerView: 1,
-                    spaceBetween: 20,
+                    320: {
+                        slidesPerView: 1,
+                        spaceBetween: 20,
+                    },
+                    640: {
+                        slidesPerView: 2,
+                        spaceBetween: 10,
+                    },
+                    768: {
+                        slidesPerView: 2,
+                        spaceBetween: 40,
+                    },
+                    1024: {
+                        slidesPerView: 3,
+                    },
                 },
-                640: {
-                    slidesPerView: 2,
-                    spaceBetween: 10,
-                },
-                768: {
-                    slidesPerView: 2,
-                    spaceBetween: 40,
-                },
-                1024: {
-                    slidesPerView: 3,
-                },
-            },
-        });
-    </script>
+            });
+        </script>
 
-    <!-- JAVASCRIPT AOS  -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            duration: 1000,
-            delay: 1,
-            once: true,
-        });
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <!-- <script src="js/bootstrap.js"></script>
+        <!-- JAVASCRIPT AOS  -->
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init({
+                duration: 1000,
+                delay: 1,
+                once: true,
+            });
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+        <!-- <script src="js/bootstrap.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.js"></script> -->
 </body>
