Finance design Developed By Haseeb Web Developer

--- a/index.html
+++ b/index.html
@@ -559,20 +559,141 @@
                         </div>
                     </div>
                     <form class="form m-3">
-                    </div>
-                        <input type="text" class="form-inp" placeholder="How To Assits You">
-                        <input type="text" class="form-inp" placeholder="Your Name"><br>
-                        <input type="text" class="form-inp" placeholder="Phone Number">    
-                        <button class="btn btn-danger form-btn fs-5 py-2 px-4 my-3">SUBMIT REQUEST</button>
-                    </form>
                 </div>
+                <input type="text" class="form-inp" placeholder="How To Assits You">
+                <input type="text" class="form-inp" placeholder="Your Name"><br>
+                <input type="text" class="form-inp" placeholder="Phone Number">
+                <button class="btn btn-danger form-btn fs-5 py-2 px-4 my-3">SUBMIT REQUEST</button>
+                </form>
             </div>
         </div>
+    </div>
 
     </div>
 
+    <div class="container-fluid my-5 py-5">
+        <div class="row">
+            <div class="col-lg-4 col-md-12">
+                <div class="footer-banner d-flex my-3 flex-column ms-5">
+                    <div class="footer-banner-head position-relative">
+                        <div class="footer-banner-heading fs-6">
+                            OUR BLOGS
+                        </div>
+                    </div>
+                    <div class="welcome-intro-text-title mb-2 mt-4 display-5 fw-bold">
+                        Read Latest Articles
+                    </div>
+                    <div class="welcom-into-text-detail">
+                        A wonderful serenity has taken possession of my entire soul, like these sweet mornings.
+                    </div>
+                    <div class="col-third w-50 mt-3">
+                        <center>
+                            <button class="col-third-button">READ MORE</button>
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-12 my-4">
+                <div class="footer-banner-img-part w-100">
 
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-12 my-4">
+                <div class="footer-banner-img-part2 w-100">
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="container-fluid my-5">
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-2"></div>
+            <div class="col-2"></div>
+            <div class="col-2"></div>
+            <div class="col-2"></div>
+            <div class="col-2"></div>
+        </div>
+    </div>
+
+    <div class="container-fluid main-footer p-5 pb-1">
+        <div class="main-footer-part">
+            <div class="footer-first-ul my-5">
+                <img src="" alt="footer-img-flow" class="mb-4">
+                <ul class="footer-ul text-light">
+                    <li class="footer-list  fs-5 my-4">
+                        34 Hamston, Times Avnue NY
+                    </li>
+                    <li class="footer-list  fs-5 my-4">
+                        +1-3454-5678-77
+                    </li>
+                    <li class="footer-list  fs-5 my-4">
+                        Phlox@Averta.net
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-sec-ul my-5">
+                <ul class="footer-ul text-light">
+                    <h5 class="h3 fw-bold mb-4">Useful Links</h5>
+                    <li class="footer-list fs-5 my-2">
+                        <a href="" class="footer-ancor">
+                            About US
+                        </a>
+                    </li>
+                    <li class="footer-list fs-5 my-2">
+                        <a href="" class="footer-ancor">
+                            Our Team
+                        </a>
+                    </li>
+                    <li class="footer-list fs-5 my-2">
+                        <a href="" class="footer-ancor">
+                            Our Services
+                        </a>
+                    </li>
+                    <li class="footer-list fs-5 my-2">
+                        <a href="" class="footer-ancor">
+                            News
+                        </a>
+                    </li>
+                    <li class="footer-list fs-5 my-2">
+                        <a href="" class="footer-ancor">
+                            Career
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-sec-ul my-5">
+                <ul class="footer-ul text-light">
+                    <h5 class="h3 fw-bold mb-4">What We Do</h5>
+                    <li class="footer-list fs-5 my-2"><a href="" class="footer-ancor">Financial Advice
+                        </a></li>
+                    <li class="footer-list fs-5 my-2"><a href="" class="footer-ancor">Planning Strategies
+                        </a></li>
+                    <li class="footer-list fs-5 my-2"><a href="" class="footer-ancor">Taxation Planning</a></li>
+                    <li class="footer-list fs-5 my-2"><a href="" class="footer-ancor">Investment Trading
+                        </a></li>
+                    <li class="footer-list fs-5 my-2"><a href="" class="footer-ancor">Wealth Marketing
+                        </a></li>
+                </ul>
+            </div>
+            <div class="footer-third-ul my-5 text-light">
+                <h5 class="h3 fw-bold mb-4">Newsletter</h5>
+                <p class="footer-para fs-5">
+                    Get in your inbox the latest News
+                </p>
+                <form class="footer-form">
+                    <input type="text" class="footer-form-input" placeholder="Your Name*">
+                    <input type="text" class="footer-form-input" placeholder="Email Address*">
+                    <button type="submit" class="btn btn-danger btn-lg w-50">SUBSCRIBE</button>
+                </form>
+            </div>
+        </div>
+        <hr class="text-light">
+        <p class="footer-para-last text-center my-4">
+            © 2023 Agency Finance - Phlox Elementor WordPress Theme. All rights reserved.
+             Developed By Haseeb Web Developer 
+        </p>
+    </div>
 
 
 
