Finance design Developed By Haseeb Web Developer

--- a/index.html
+++ b/index.html
@@ -606,20 +606,32 @@
     </div>
 
     <div class="container-fluid my-5">
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="col-2"></div>
-            <div class="col-2"></div>
-            <div class="col-2"></div>
-            <div class="col-2"></div>
-            <div class="col-2"></div>
+        <div class="copyrights-imgs mx-4">
+            <div class="cimg">
+                <img src="content/client-1@2x.png" alt="">
+            </div>
+            <div class="cimg">
+                <img src="content/client-3@2x.png" alt="">
+            </div>
+            <div class="cimg">
+                <img src="content/client-4@2x.png" alt="">
+            </div>
+            <div class="cimg">
+                <img src="content/client-5@2x.png" alt="">
+            </div>
+            <div class="cimg">
+                <img src="content/client-7@2x.png" alt="">
+            </div>
+            <div class="cimg">
+                <img src="content/client-9@2x.png" alt="">
+            </div>
         </div>
     </div>
 
     <div class="container-fluid main-footer p-5 pb-1">
         <div class="main-footer-part">
             <div class="footer-first-ul my-5">
-                <img src="" alt="footer-img-flow" class="mb-4">
+                <img src="content/cropped-Group-329.png" alt="footer-img-flow" class="mb-4">
                 <ul class="footer-ul text-light">
                     <li class="footer-list  fs-5 my-4">
                         34 Hamston, Times Avnue NY
