Finance design Developed By Haseeb Web Developer

--- a/index.html
+++ b/index.html
@@ -607,22 +607,22 @@
 
     <div class="container-fluid my-5">
         <div class="copyrights-imgs mx-4">
-            <div class="cimg">
+            <div class="cimg" data-aos="fade-left">
                 <img src="content/client-1@2x.png" alt="">
             </div>
-            <div class="cimg">
+            <div class="cimg" data-aos="fade-left">
                 <img src="content/client-3@2x.png" alt="">
             </div>
-            <div class="cimg">
+            <div class="cimg"  data-aos="fade-left">
                 <img src="content/client-4@2x.png" alt="">
             </div>
-            <div class="cimg">
+            <div class="cimg"  data-aos="fade-left">
                 <img src="content/client-5@2x.png" alt="">
             </div>
-            <div class="cimg">
+            <div class="cimg"  data-aos="fade-left">
                 <img src="content/client-7@2x.png" alt="">
             </div>
-            <div class="cimg">
+            <div class="cimg"  data-aos="fade-left">
                 <img src="content/client-9@2x.png" alt="">
             </div>
         </div>
@@ -630,7 +630,7 @@
 
     <div class="container-fluid main-footer p-5 pb-1">
         <div class="main-footer-part">
-            <div class="footer-first-ul my-5">
+            <div class="footer-first-ul my-5" data-aos="fade-left" data-aos-delay="1000">
                 <img src="content/cropped-Group-329.png" alt="footer-img-flow" class="mb-4">
                 <ul class="footer-ul text-light">
                     <li class="footer-list  fs-5 my-4">
@@ -644,7 +644,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="footer-sec-ul my-5">
+            <div class="footer-sec-ul my-5"  data-aos="fade-left" data-aos-delay="1000">
                 <ul class="footer-ul text-light">
                     <h5 class="h3 fw-bold mb-4">Useful Links</h5>
                     <li class="footer-list fs-5 my-2">
@@ -674,7 +674,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="footer-sec-ul my-5">
+            <div class="footer-sec-ul my-5" data-aos="fade-left" data-aos-delay="1000">
                 <ul class="footer-ul text-light">
                     <h5 class="h3 fw-bold mb-4">What We Do</h5>
                     <li class="footer-list fs-5 my-2"><a href="" class="footer-ancor">Financial Advice
@@ -688,7 +688,7 @@
                         </a></li>
                 </ul>
             </div>
-            <div class="footer-third-ul my-5 text-light">
+            <div class="footer-third-ul my-5 text-light" data-aos="fade-left" data-aos-delay="1000">
                 <h5 class="h3 fw-bold mb-4">Newsletter</h5>
                 <p class="footer-para fs-5">
                     Get in your inbox the latest News
@@ -700,6 +700,7 @@
                 </form>
             </div>
         </div>
+        
         <hr class="text-light">
         <p class="footer-para-last text-center my-4">
             © 2023 Agency Finance - Phlox Elementor WordPress Theme. All rights reserved.
